Add the stock_controller and show the price on browse

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,15 @@
 .navbar-brand{
     font-size: 1rem;
 }
+
+.search-area{
+    margin-top: 50px;
+}
+
+.no-right-padding{
+    padding-right: 0 !important;
+}
+
+.no-left-padding{
+    padding-left: 0 !important;
+}
