--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Welcome yto the finance tracker application</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Welcome to the finance tracker application</h1>
 
 <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
