add dealing with invalid search results

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,5 @@
 .navbar-brand{
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .search-area{
@@ -13,3 +13,11 @@
 .no-left-padding{
     padding-left: 0 !important;
 }
+
+.result-board{
+    display: inline-block;
+}
+
+// #bar-color{
+//     background-color: black;
+// }
