cleanup application layout

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,8 +16,12 @@
 
 .result-board{
     display: inline-block;
+    margin-bottom: 1rem;
 }
 
 // #bar-color{
 //     background-color: black;
 // }
+.logout-button{
+    margin-right: 10px;
+}
