--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -28,8 +28,12 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
-          </ul>
-          <ul class='navbar-nav ml-auto'>
+        </ul>
+
+        <ul class='navbar-nav ml-auto'>
+          <li class='nav-item user-name'>
+            <%= fa_icon 'user' %><%= current_user.full_name %>
+          <li>
           <li class='nav-itme'>
             <%= link_to("Logout", destroy_user_session_path,
               class: "btn btn-xs btn-danger logout-button", method: :delete) %>
