add my_friends view with listing

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,2 @@
 <h1>Welcome to the finance tracker application</h1>
-
-<%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+<p>Create a welcome page</p>
