add the message style

--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -16,7 +16,7 @@
               <%= link_to 'Follow friend?', friendships_path(friend: friend),
                                     class: "btn btn-sm btn-success", method: :post %></td>
             <% else %>
-              <span class="badge badge-secondar">
+              <span class="badge badge-secondary">
                 You are friends
               </span>
             <% end %>
